After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758446 - Plugins with dependencies are not correctly ordered
Plugins with dependencies are not correctly ordered
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2015-11-21 03:59 UTC by Garrett Regier
Modified: 2015-12-16 01:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Order the PeasEngine:plugin-list by dependencies (6.79 KB, patch)
2015-11-21 04:00 UTC, Garrett Regier
committed Details | Review
Keep plugins order in PeasExtensionSet (5.64 KB, patch)
2015-11-21 04:01 UTC, Garrett Regier
committed Details | Review
Add debug message for PeasEngine:plugin-list (4.35 KB, patch)
2015-11-21 04:01 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2015-11-21 03:59:29 UTC
PeasEngine:plugin-list does not take dependencies into consideration and PeasExtensionSet adds and removes extensions in an unordered manner.

This is an issue for a WIP branch of GNOME Builder.
Comment 1 Garrett Regier 2015-11-21 04:00:45 UTC
Created attachment 316007 [details] [review]
Order the PeasEngine:plugin-list by dependencies

Otherwise PeasExtensionSet could add an extension for a plugin before that of a plugin it depends on.
Comment 2 Garrett Regier 2015-11-21 04:01:13 UTC
Created attachment 316009 [details] [review]
Keep plugins order in PeasExtensionSet

The PeasEngine orders the plugin-list based on dependencies and it should be maintained.
Comment 3 Garrett Regier 2015-11-21 04:01:39 UTC
Created attachment 316010 [details] [review]
Add debug message for PeasEngine:plugin-list

This is useful to debug the order in which plugins are stored and how other API behaves in regards to that order.
Comment 4 Garrett Regier 2015-12-16 01:12:44 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.