Order the PeasEngine:plugin-list by dependencies

Otherwise PeasExtensionSet could add an extension
for a plugin before that of a plugin it depends on.

https://bugzilla.gnome.org/show_bug.cgi?id=758446